--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "lodash": "^3.10.1",
     "radium": "^0.17.1",
     "react": "^15.1.0",
+    "react-addons-pure-render-mixin": "^15.1.0",
     "react-color": "^2.2.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "react-hotkeys": "^0.8.0",
     "react-portal": "^2.1.3",
+    "react-prism": "^3.2.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2"
   },
