--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   },
   "homepage": "https://github.com/ryosuzuki/hint#readme",
   "dependencies": {
+    "brace": "^0.8.0",
     "classnames": "^2.2.5",
     "express": "^4.14.0",
     "lodash": "^3.10.1",
     "radium": "^0.17.1",
     "rc-slider": "^3.7.4",
     "react": "^15.1.0",
+    "react-ace": "^3.5.0",
     "react-addons-pure-render-mixin": "^15.1.0",
     "react-color": "^2.2.0",
     "react-dom": "^15.1.0",
