--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "brace": "^0.8.0",
     "classnames": "^2.2.5",
+    "code-mirror-themes": "^1.0.0",
+    "codemirror": "^5.16.0",
     "express": "^4.14.0",
     "lodash": "^3.10.1",
     "radium": "^0.17.1",
@@ -26,6 +28,7 @@
     "react": "^15.1.0",
     "react-ace": "^3.5.0",
     "react-addons-pure-render-mixin": "^15.1.0",
+    "react-codemirror": "^0.2.6",
     "react-color": "^2.2.0",
     "react-dom": "^15.1.0",
     "react-hot-loader": "^1.3.0",
