--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "bower-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "static-loader": "^0.1.8",
     "style-loader": "^0.13.1",
     "svg-inline-loader": "^0.4.1",
