--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "webpack-dev-server --hot"
   },
   "repository": {
     "type": "git",
@@ -53,6 +53,7 @@
     "file-loader": "^0.8.5",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
+    "react-hot-loader": "^1.3.0",
     "static-loader": "^0.1.8",
     "style-loader": "^0.13.1",
     "svg-inline-loader": "^0.4.1",
