--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "semantic-ui-css": "^2.2.2"
   },
   "devDependencies": {
@@ -39,6 +40,7 @@
     "babel-plugin-webpack-loaders": "^0.5.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "bower-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
@@ -52,6 +54,8 @@
     "svg-inline-loader": "^0.4.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-hot-middleware": "^2.12.1"
   }
 }
