--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
+    "redux-watch": "^1.1.1",
     "semantic-ui-css": "^2.2.2"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "bower-webpack-plugin": "^0.1.9",
     "css-loader": "^0.23.1",
     "file-loader": "^0.8.5",
+    "jsx-control-statements": "^3.1.2",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "react-hot-loader": "^1.3.0",
